# devJobs-backend

./: main.py  pyproject.toml
core/: config.py  db.py
interfaces/userInterfaces/: IUserRepository.py
models/enums/: jobEnums.py  sharedEnums.py  userEnums.py
models/generics/: genericResponse.py
models/modelHelpers/: idHandler.py
models/userModels/: user.py  userEducation.py  userExperience.py  userProfile.py
repositories/userRepositories/: UserRepository.py
routes/: users.py
utils/queryManagement/: apiResponse.py
utils/security/: apiResponse.py  password.py
