[project]
name = "devjobs"
version = "0.1.0"
description = "backend for a software and web development jobs app"
authors = [
    {name = "Jorge Gonzalez"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pymongo[srv] (>=4.13.2,<5.0.0)"
]

[tool.poetry.scripts]
    dev = " run uvicorn main:app --reload"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
